--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "author": "layobright",
   "license": "MIT",
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.78",
     "bcrypt": "^5.0.1",
     "comma-separator": "^1.0.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "googleapis": "^107.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "nodemailer": "^6.7.8"
