--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "googleapis": "^107.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
-    "nodemailer": "^6.7.8"
+    "nodemailer": "^6.7.8",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
