--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.78",
+    "axios": "^1.2.1",
     "bcrypt": "^5.0.1",
     "comma-separator": "^1.0.7",
     "cookie-parser": "^1.4.6",
